--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>LZ77</title>
     <style>
         body {
-            font-family: sans-serif;
+            font-family: sans-serif, sans-serif;
             margin: 20px;
             display: flex;
             flex-direction: column;
